Updated create request docs
